fixed colors contrast

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .page-title {
-  color: #08174d;
+  color: #3bc0c0;
   font-family: "Mountains of Christmas", cursive;
   font-weight: normal;
   text-align: center;
@@ -156,5 +156,9 @@ img {
   .game-info-container {
     flex-direction: column;
     align-items: center;
+  }
+  .overlay-text.visible {
+    display: flex;
+   
   }
 }
